manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-obj
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - frontend.48.217.195.23.nip.io
      secretName: my-app-tls
  rules:
  - host: frontend.48.217.195.23.nip.io
    http:
      paths:
      - path: /web1
        pathType: Prefix
        backend:
          service:
            name: web1
            port:
              number: 80
      - path: /web2
        pathType: Prefix
        backend:
          service:
            name: web2
            port:
              number: 80
      - path: /dotnet
        pathType: Prefix
        backend:
          service:
            name: dotnet
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
         service:
           name: default
           port:
             number: 80
